Mon Jun  5 16:35:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added apitest for correct wdf values in termlists (indirectly,
	  by performing an expand on two different relevant documents of
	  the same length, and comparing the weights for a common term).
	  Fails for sleepycat, as expected.

Mon Jun  5 16:12:19 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Updated apitest's indexing to include keys, so the inmemory
	  tests now all work again.

Mon Jun  5 14:51:56 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* SleepyPostLists now use the document length when calculating weights.

Mon Jun  5 14:36:28 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix internaltest to cope with changed SleepyListItem parameters.

Mon Jun  5 14:31:50 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Inmemory database now supports "keys" properly.

Mon Jun  5 14:26:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Enable storage of the sum of the wdfs in a SleepyList in the list.
	  Use this to implement SleepyDatabase::get_doclength(), which reads
	  the wdfsum from the termlist.

Mon Jun  5 14:22:33 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implement PostList::get_doclength() in each branchpostlist rather
	  than actually in the BranchPostList base class, since each
	  implementation needs to be different (both sub-postlists are
	  not always valid)

	* Use PostList::get_doclength() rather than the database version, to
	  get the document length in the matcher.

Sat Jun  3 00:31:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Attempt to make LocalMatch asks the query for the document length,
	  rather than the database.  This code currently commented out,
	  because it causes test failures and a segfault.

Sat Jun  3 00:18:50 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a get_doclength() method to postlists.  Some return the